src/styles.scss
body {
  *, *:before, *:after {
    box-sizing: border-box;
  }

  margin: 0;
  line-height: 1.3;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  color: #303030;

  .container {
    width: 100%;
    margin: 0 auto;
    padding: 2rem 1.25rem;

    a {
      color: royalblue;
      font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;

      &:link, &:visited, &:focus {
        text-decoration: none;
      }

      &:hover, &:active {
        text-decoration: underline;
      }
    }

    .svg-inline--fa {
      height: 1em;
      vertical-align: -0.125em;

      &.fa-3x {
        font-size: 3em;
      }
    }

    main {
      p {
        margin: 0.5rem 0;
      }

      h1 {
        margin: 0.5rem 0;
        font-size: 2em;
        font-weight: normal;
      }

      h2 {
        margin: 2rem 0 0.5rem;
        font-size: 1.5em;
        font-weight: normal;
      }

      .tone-generator {
        label {
          clip: rect(0 0 0 0);
          clip-path: inset(50%);
          height: 1px;
          overflow: hidden;
          position: absolute;
          white-space: nowrap;
          width: 1px;
        }

        button {
          font-family: inherit;
          font-size: 0.9em;
          padding: 0.5em;
          background-color: WhiteSmoke;
          border: 1px solid WhiteSmoke;
          border-radius: 10px;
          cursor:pointer;

          &:hover:not(.active) {
            border: 1px solid DarkGrey;
          }

          &.active {
            background-color: DarkGrey;
            border: 1px solid DarkGrey;
          }
        }
      }
    }

    footer {
      margin: 2rem 0;
      text-align: center;
      font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;
    }
  }

  @media (min-width: 786px) {
    .container {
      max-width: 786px;
    }
  }
}

